# snn-mlir

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  copyright_script.py
.github/workflows/: Action_based_on_cmake.yml  Action_build_on_ubuntu.yml  Action_build_via_external.yml
include/: CMakeLists.txt
include/LinalgExt/: CMakeLists.txt  LinalgExt.td  LinalgExtDialect.h  LinalgExtDialect.td  LinalgExtOps.h  LinalgExtOps.td
include/SNN/: CMakeLists.txt  SNNOps.td  SNNPasses.h  SNNToLinalgOpspasses.h
include/snn-mlir/: InitAllDialects.h  InitAllPasses.h
include/snn-mlir-c/: SNN.h
include/snn-mlir/Conversion/: Passes.h
include/snn-mlir/Conversion/EliminateRedundantTensorOps/: EliminateRedundantTensorOpspasses.h
include/snn-mlir/Conversion/SNNToLinalgOps/: SNNToLinalgOpspasses.h
include/snn-mlir/Conversion/SNNToStd/: SNNPasses.h
include/snn-mlir/Conversion/unrollcopy/: unrollcopypasses.h
include/snn-mlir/Dialect/: CMakeLists.txt
include/snn-mlir/Dialect/LinalgExt/: CMakeLists.txt  LinalgExt.td  LinalgExtDialect.h  LinalgExtOps.h  LinalgExtOps.td
include/snn-mlir/Dialect/SNN/: CMakeLists.txt  SNN.td  SNNDialect.h  SNNOps.h  SNNOps.td
include/unrollcopy/: unrollcopypasses.h
lib/: CMakeLists.txt
lib/Bindings/: CMakeLists.txt
lib/Bindings/Python/: CMakeLists.txt  SNNModules.cpp
lib/Bindings/Python/snn-mlir/dialects/: snnOps.td
lib/Bindings/Python/snn_mlir/: __init__.py
lib/Bindings/Python/snn_mlir/dialects/: _ods_common.py  snn.py  snnOps.td
lib/CAPI/Dialect/: CMakeLists.txt  SNN.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/EliminateRedundantTensorOps/: CMakeLists.txt  EliminateRedundantTensorOps.cpp
lib/Conversion/SNNToLinalgOps/: CMakeLists.txt  SNNToLinalgOps.cpp
lib/Conversion/SNNToStd/: CMakeLists.txt  SNNToStd.cpp
lib/Conversion/unrollcopy/: CMakeLists.txt  unrollcopy.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/LinalgExt/: CMakeLists.txt  LinalgExt.cpp
lib/Dialect/SNN/: CMakeLists.txt  snn.cpp
lib/LinalgExt/: CMakeLists.txt
lib/SNN/: CMakeLists.txt  SNNToLinalgOps.cpp  SNNToStd.cpp
lib/unrollcopy/: CMakeLists.txt  unrollcopy.cpp
mlir-snn/: CMakeLists.txt  lifstd-for.mlir
mlir-snn/include/SNN/: SNN.td
mlir-snn/lib/: SNNToStd.cpp  snn.cpp
python/: CMakeLists.txt  SNNModules.cpp  __init__.py
python/pysnn/: CMakeLists.txt  ods.py  snn_pybind.cpp
python/snn-pybind/: CMakeLists.txt
snn-mlir/: lifstd.mlir  liftest2.mlir
snn-mlir/include/: CMakeLists.txt
snn-mlir/include/SNN/: SNNDialect.h  SNNDialect.td  SNNOps.h
snn-mlir/lib/: CMakeLists.txt  SNNToStd copy.cpp
snn-opt/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Bindings/: smoketest.py
test/Conversion/SNNToLinalg/: convert-snn-to-Linalgops.mlir
test/Lowering/Conv/: lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-tosa-to-linalg.mlir
test/Lowering/Fc/: lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-tosa-to-linalg.mlir
test/Lowering/Lif/: lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-snn-to-linalg.mlir
test/Lowering/Matadd/: lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-tosa-to-linalg.mlir
test/Lowering/Matmul/: lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-tosa-to-linalg.mlir
test/Lowering/Relu/: lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-tosa-to-linalg.mlir
test/Lowering/conv/: lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-tosa-to-linalg.mlir
test/Lowering/fc/: lowering-affine-to-emitc.mlir  lowering-buffer-to-affine.mlir  lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-tosa-to-linalg.mlir
test/Lowering/matadd/: lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-tosa-to-linalg.mlir
test/Lowering/relu/: lowering-buffer-to-loweraffine.mlir  lowering-linalg-to-buffer.mlir  lowering-loweraffine-to-emitc.mlir  lowering-tosa-to-linalg.mlir
tests/: affine-fusion.mlir  affine-tile.mlir  emitc.mlir  func_to_emitc.mlir  lif-foldtensor.mlir  lif-linalgops.mlir  liffor.mlir  liffor109.mlir  lifforfold.mlir  lifgenericfold.mlir  liftest.mlir  memref_to_emitc.mlir
tests/linalg/: affine-scf.mlir  affine.mlir  buffer.mlir  conv_c.cpp  lif-linalg.mlir
tests/std/: if-std.mlir  iftest.mlir
tools/: CMakeLists.txt
tools/snn-opt/: CMakeLists.txt  snn-opt.cpp
